Add 16 divs using js with for loop

--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
     <h1>ETCH - A - SKETCH</h1>
   </header>
 
-  <div class="container">
-
-
-
-  </div>
+  <div class="container"></div>
+  
   <script src="script.js"></script>
 </body>
 </html>
