Add a default 16x16 grid using js and CSS Grid. Add input and buttons to change and reset grid size

--- a/index.html
+++ b/index.html
@@ -12,8 +12,15 @@
     <h1>ETCH - A - SKETCH</h1>
   </header>
 
-  <div class="container"></div>
-  
+  <div class="input">
+    <div>Enter number between 1 and 100</div>
+    <input type="text">
+    <button id="set-grid-size">Set Grid Size</button>
+    <button id="reset-grid-btn">Reset Grid</button>
+  </div>
+
+  <div class="grid"></div>
+
   <script src="script.js"></script>
 </body>
 </html>
