Add mouseover eventlistener that changes div (squares) colour

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div>Enter number between 1 and 100</div>
     <input type="text">
     <button id="set-grid-size">Set Grid Size</button>
-    <button id="reset-grid-btn">Reset Grid</button>
+    <button id="reset-grid">Reset Grid</button>
   </div>
 
   <div class="grid"></div>
