Add JS that changessketch color based on selected button

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
       <button id="set-grid-size">Set Grid Size</button>
       <button id="reset-grid">Reset Grid</button>
       <div id="color-buttons">
-        <button id="black" class="color-button black">Black</button>
-        <button id="red" class="color-button red">Red</button>
-        <button id="blue" class="color-button blue">Blue</button>
-        <button id="green" class="color-button green">Green</button>
+        <button class="color-button black">Black</button>
+        <button class="color-button red">Red</button>
+        <button class="color-button blue">Blue</button>
+        <button class="color-button green">Green</button>
+        <button class="color-button white">White</button>
       </div>
     </div>
 
